updated gitignore (added secform)

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ helper/
 Init_Django_Project/first_project/
 Init_Django_Project/formsproject/
 Init_Django_Project/Redo modelforms from scratch
+secform/
