modified gitignore (added bootstrap offline file)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Init_Django_Project/first_project/
 Init_Django_Project/formsproject/
 Init_Django_Project/Redo modelforms from scratch
 secform/
+Bootstrap Page Offline/
